--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: Total Error = 0.5645568234474497\n",
+      "Epoch 0: Total Error = 0.5645568234474498\n",
       "Epoch 100: Total Error = 0.6063723068866173\n",
       "Epoch 200: Total Error = 0.6066089680277382\n",
       "Epoch 300: Total Error = 0.6066752466471951\n",
-      "Epoch 400: Total Error = 0.606705455371688\n",
+      "Epoch 400: Total Error = 0.6067054553716881\n",
       "Epoch 500: Total Error = 0.6067224592641749\n",
       "Epoch 600: Total Error = 0.6067332530853968\n",
       "Epoch 700: Total Error = 0.6067406616125686\n",
@@ -21,15 +21,21 @@
       "Epoch 900: Total Error = 0.60675009248527\n",
       "\n",
       "Hasil Akhir:\n",
-      "Data-1: Target = 0, Output JST = 0.7310293713951022\n",
-      "Data-2: Target = 1, Output JST = 0.7310585811720788\n",
-      "Data-3: Target = 1, Output JST = 0.7310585786763927\n",
-      "Data-4: Target = 0, Output JST = 0.7310564900651964\n"
+      "Data-1: Target = 0, Output Layer = 0.7310293713951022\n",
+      "Data-2: Target = 1, Output Layer = 0.7310585811720788\n",
+      "Data-3: Target = 1, Output Layer = 0.7310585786763927\n",
+      "Data-4: Target = 0, Output Layer = 0.7310564900651964\n"
      ]
     }
    ],
    "source": [
-    "import math\n",
+    "# Fungsi sigmoid\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + 2.718281828459045 ** (-x))  # 2.718281828459045 adalah nilai e\n",
+    "\n",
+    "# Fungsi turunan sigmoid\n",
+    "def sigmoid_derivative(x):\n",
+    "    return x * (1 - x)\n",
     "\n",
     "# Inisialisasi bobot awal\n",
     "w1a, w1b = 0.24, -0.3\n",
@@ -41,19 +47,15 @@
     "b = 1\n",
     "\n",
     "# Learning rate\n",
-    "alpha = 0.5\n",
+    "learning_rate = 0.5\n",
     "\n",
     "# Data input\n",
     "x1_values = [2, 3, 4, 5]\n",
     "x2_values = [2, 6, 8, 1]\n",
     "target_values = [0, 1, 1, 0]\n",
     "\n",
-    "# Fungsi sigmoid\n",
-    "def sigmoid(x):\n",
-    "    return 1 / (1 + math.exp(-x))\n",
-    "\n",
-    "# Pelatihan JST\n",
-    "for epoch in range(1000):  # Jumlah iterasi (boleh disesuaikan)\n",
+    "# Training\n",
+    "for epoch in range(1000):  # Jumlah iterasi \n",
     "    total_error = 0\n",
     "\n",
     "    for i in range(len(x1_values)):\n",
@@ -75,22 +77,22 @@
     "        total_error += error\n",
     "\n",
     "        # Hitung Error Turunan δ untuk node output y\n",
-    "        delta_output = (target - y_out) * y_out * (1 - y_out)\n",
+    "        delta_output = (target - y_out) * sigmoid_derivative(y_out)\n",
     "\n",
     "        # Hitung Koreksi Bobot Δ untuk setiap bobot yang tersambung ke node pada layer output y\n",
-    "        delta_w1a = alpha * delta_output * z_out1\n",
-    "        delta_w1b = alpha * delta_output * z_out2\n",
+    "        delta_w1a = learning_rate * delta_output * z_out1\n",
+    "        delta_w1b = learning_rate * delta_output * z_out2\n",
     "\n",
-    "        delta_w2a = alpha * delta_output * z_out1\n",
-    "        delta_w2b = alpha * delta_output * z_out2\n",
+    "        delta_w2a = learning_rate * delta_output * z_out1\n",
+    "        delta_w2b = learning_rate * delta_output * z_out2\n",
     "\n",
     "        # Hitung Error Turunan δ untuk node hidden z\n",
     "        delta_z1 = delta_output * v1a * z_out1 * (1 - z_out1)\n",
     "        delta_z2 = delta_output * v2b * z_out2 * (1 - z_out2)\n",
     "\n",
     "        # Hitung Koreksi Bobot Δ untuk setiap bobot yang tersambung ke node pada layer hidden z\n",
-    "        delta_v1a = alpha * delta_z1 * b\n",
-    "        delta_v2b = alpha * delta_z2 * b\n",
+    "        delta_v1a = learning_rate * delta_z1 * b\n",
+    "        delta_v2b = learning_rate * delta_z2 * b\n",
     "\n",
     "        # Update Bobot w untuk setiap bobot yang menyambungkan layer hidden ke layer output\n",
     "        w1a += delta_w1a\n",
@@ -122,7 +124,7 @@
     "    y_in = b + z_out1 * v1a + z_out2 * v2b\n",
     "    y_out = sigmoid(y_in)\n",
     "\n",
-    "    print(f\"Data-{i + 1}: Target = {target}, Output JST = {y_out}\")\n"
+    "    print(f\"Data-{i + 1}: Target = {target}, Output Layer = {y_out}\")\n"
    ]
   }
  ],
